<?xml version="1.0"?>
<package>
  <name>open_karto</name>
  <version>1.0.1</version>
  <description>Release-package for OpenKarto</description>

  <maintainer email="swirth@willowgarage.com">Stephan Wirth</maintainer>
  <license>LGPLv3</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
