<?xml version="1.0"?>
<package>
  <name>open_karto</name>
  <version>1.1.0</version>
  <description>Catkinized ROS packaging of the OpenKarto library</description>

  <maintainer email="fergs@unboundedrobotics.com">Michael Ferguson</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
